--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+$navbar-height: 100px;
+
+@import "bootstrap-sprockets";
+
+@import "bootstrap";
+
+body { padding-top: 120px; }
