--- a/rails/app/views/bookmarks/index.html.erb
+++ b/rails/app/views/bookmarks/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Url</th>
+      <th>Tags</th>
       <th>Description</th>
       <th colspan="3"></th>
     </tr>
@@ -17,6 +18,7 @@
       <tr>
         <td><%= bookmark.name %></td>
         <td><%= bookmark.url %></td>
+        <td><%= bookmark.all_tags %></td>
         <td><%= bookmark.description %></td>
         <td><%= link_to 'Show', bookmark %></td>
         <td><%= link_to 'Edit', edit_bookmark_path(bookmark) %></td>
