--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :url %>
   </div>
   <div class="field">
+    <%= f.label :tags %><br>
+    <%= f.text_field :all_tags %>
+  </div>
+  <div class="field">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
