--- a/rails/app/views/bookmarks/show.html.erb
+++ b/rails/app/views/bookmarks/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Tags:</strong>
+  <%= @bookmark.all_tags %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @bookmark.description %>
 </p>
