Added tags autocomplete functionality with jQuery UI autocomplete and middleware

--- a/rails/app/views/bookmarks/_form.html.erb
+++ b/rails/app/views/bookmarks/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :tags %><br>
-    <%= f.text_field :all_tags %>
+    <%= f.text_field :all_tags, id: 'tags_autocomplete' %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
