Added Google oauth2 authentication

--- a/rails/app/views/homepages/index.html.erb
+++ b/rails/app/views/homepages/index.html.erb
@@ -6,3 +6,10 @@ Sign In Using :
   <%= image_tag "github_small.png", :size => "64x64", :alt => "Github" %>
   Github
 </a>
+
+<br/>
+
+<a href="/auth/google_oauth2" class="auth_provider">
+  <%= image_tag "google_small.png", :size => "64x64", :alt => "Google" %>
+  Google
+</a>
