Added twitter authentication

--- a/rails/app/views/homepages/index.html.erb
+++ b/rails/app/views/homepages/index.html.erb
@@ -13,3 +13,10 @@ Sign In Using :
   <%= image_tag "google_small.png", :size => "64x64", :alt => "Google" %>
   Google
 </a>
+
+<br/>
+
+<a href="/auth/twitter" class="auth_provider">
+  <%= image_tag "twitter_small.png", :size => "64x64", :alt => "Twitter" %>
+  Twitter
+</a>
